@@ -2,8 +2,10 @@ README
 lib/Daemon/Generic.pm
 lib/Daemon/Generic.pod
 lib/Daemon/Generic/Event.pm
+lib/Daemon/Generic/AnyEvent.pm
 lib/Daemon/Generic/While1.pm
 Makefile.PL
 MANIFEST
 CHANGELOG
+t/daemon.t
 META.yml                                 Module meta-data (added by MakeMaker)
