@@ -309,19 +309,21 @@ SEE ALSO
 
     With Event: Daemon::Generic::Event.
 
-    Modules that use Daemon::Generic: SyslogScan::Daemon IO::Event
+    With AnyEvent: Daemon::Generic::AnyEvent.
+
+    Modules that use Daemon::Generic: SyslogScan::Daemon; IO::Event
     (rinetd.pl)
 
     Other modules that do similar things: Net::Daemon, Net::Server,
     Net::Server::Daemonize, NetServer::Generic, Proc::Application::Daemon,
     Proc::Daemon, Proc::Forking.
 
-THANK THE AUTHOR
-    If you need high-speed internet services (T1, T3, OC3 etc), please send
-    me your request-for-quote. I have access to very good pricing: you'll
-    save money and get a great service.
-
 LICENSE
-    Copyright(C) 2006 David Muir Sharnoff <perl@dave.sharnoff.org>, This
-    module may be used and distributed on the same terms as Perl itself.
+    Copyright (C) 2006-2010 David Muir Sharnoff <cpan@dave.sharnoff.org>.
+    Copyright (C) 2011 Google, Inc. This module may be used and distributed
+    on the same terms as Perl itself.
+
+PACKAGERS
+    Daemon::Generic is packaged for Fedora by Emmanuel Seyman
+    <emmanuel.seyman@club-internet.fr>.
 
